Quick hotfix to stop image clipping

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ header img {
     margin-right: auto;
     width: 300px;
     height: 400px;
-    /* overflow: hidden; */
+    overflow: hidden;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     text-align: center;
     border-radius: 10px;
@@ -118,6 +118,13 @@ header img {
     transition: transform 0.2s ease-in-out;
 }
 
+#foodWrapper {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    height: 400px;
+}
 
 .allergyCheckbox {
     margin-bottom: 5px;
@@ -178,6 +185,7 @@ header img {
     transform: translate(1rem, 1rem);
     border-radius: 1.5rem;
     font-size: small;
+    z-index: 10;
 }
 
 .super-btn:hover {
